traces/bug_179.txt
examples++-load/ffnewuoa.cpp:133: error: DEAD_STORE
  The value written to &cost (type double) is never used.
Showing all 1 steps of the trace


examples++-load/ffnewuoa.cpp:133:7: Write of unused value
131.       virtual AnyType operator()(Stack stack)  const
132.       {
133.         double cost = 1e100;
             ^
134.         WhereStackOfPtr2Free(stack)=new StackOfPtr2Free(stack);// FH mars 2005 
135.         Kn &x = *GetAny<Kn *>((*X)(stack));	
